fixed banners, no dead links, THE SITE IS DONE!!!

--- a/about.html
+++ b/about.html
@@ -22,9 +22,6 @@
     <link href="css/carousel2.css" rel="stylesheet">
 
 
-    <link href="css/scrolling-nav.css" rel="stylesheet">
-
-
     <link rel="stylesheet" type="text/css" href="css/fullPage.css">
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
@@ -159,14 +156,16 @@
 
           <hr class="featurette-divider">
    <!-- <div class="mission-div" style = "background-color: white; ">-->
-   <div class = "row featurette" section id = "whatisVR">
+   <div class = "row featurette" section id = "whatisVR" style="padding:50px;">
+                    <center>
+
             <div class="col-lg-8 col-lg-push-2">
                 <h2 class="featurette-heading">
                     What is <span class= "text-primary">Virtual Reality?</span>
                 </h2>
                 <p class="lead">VR, or virtual reality is a technology that was introduced back in the 1950s but has not advanced in the way that it was in the 21st century. virtual reality is an immersive computer-simiulated reality where users where headsets in order to be transported to alternate realities. Originally Virtual Reality was thought to be mainly for entertainment but as of recent there have been advances in fields including medicine and education, showing how versatile it is.</p>
             </div>
-               
+               </center>
                         <center>
                        <div class = "vrGear">
                               <img src="img/gearVR.png" height= "200" width= "200">
@@ -187,9 +186,11 @@
    <!-- <div class="mission-div" style = "background-color: white; ">-->
    <div class = "row featurette" section id = "Mission" style="background-color: #f2f2f2; padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
+                <center>
                 <h2 class="featurette-heading">
                     Our <span class= "text-primary">Mission</span>
                 </h2> <br><br>
+                </center>
                 <p class="lead" style="font-weight: bold; text-align: center;">We aim to create a multidisciplinary student community with a shared interest in virtual reality or augmented reality.</p>
                 <br>
                 <p class ="lead">At UCSD's Virtual Reality Club, our goal is to provide workshops to give members the skills that the virtual reality industry looks for to further pursue a career in the field. As well as work on a vast array of projects between different disciplines and work with clubs across campus. Since our founding in September 2015, we have reached over 200 students across a range of majors and had companies such as Qualcomm, OSSIC VR, and NanoVR come speak to our students. We look forward to growing the community and supporting the students who are passionate for the future of virtual and augmented reality.</p>
@@ -202,13 +203,17 @@
 
          <hr class="featurette-divider">
    <!-- <div class="mission-div" style = "background-color: white; ">-->
-   <div class = "row featurette" section id = "honeycombs" style="background-color: white;">
+   <div class = "row featurette" section id = "honeycombs" style="background-color: white; padding: 40px;">
+                <center>
             <div class="col-lg-8 col-lg-push-2">
                 <h2 class="featurette-heading">
                     Meet the <span class= "text-primary">Team</span>
                 </h2> 
-                <p class ="lead">At UCSD's Virtual Reality Club, our goal is to provide workshops to give members the skills that the virtual reality industry looks for to further pursue a career in the field. As well as work on a vast array of projects between different disciplines and work with clubs across campus. Since our founding in September 2015, we have reached over 200 students across a range of majors and had companies such as Qualcomm, OSSIC VR, and NanoVR come speak to our students. We look forward to growing the community and supporting the students who are passionate for the future of virtual and augmented reality.</p>
+                <center>
+                <p class ="lead">We at the Virtual Reality Club pride ourselves in being a diverse set of individuals that have a common passion to change the world.</p>
+                </center>
             </div>
+                </center>
             </div>
 
             <br><br>
@@ -302,8 +307,8 @@
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
                                     <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://twitter.com" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="http://youtube.com" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
                             </div>
                             </center>
