--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
 
       <hr class="featurette-divider">
         <center>
-        <div class="row featurette" section id = "location">
+        <div class="row featurette" section id = "location" style="padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
                 <h2 class="featurette-heading">
                     Location. <span class="text-primary">Come Find Us.</span>
@@ -163,7 +163,7 @@
                 <br><br><br>
 
 
-                <div class="row featurette" section id = "getInvolved">
+                <div class="row featurette" section id = "getInvolved" style="padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
                 <center><h2 class="featurette-heading">
                   Be Apart of Something <span class = "text-primary">Great.</span> 
@@ -196,7 +196,7 @@
                                 With the technology rising so fast take the opporunity to ride the momentum with us!
                             </p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Sign
+                                <a class="btn btn-lg btn-primary" href="https://docs.google.com/forms/d/1gUgqPcn_z0wt1cft38riUapG6BLm3gAMoFqQ-M9NCLg/viewform" role="button">Sign
                                     up today</a>
                             </p>
                         </div>
@@ -210,7 +210,7 @@
                             <h1>Learn about the applications of VR in the fields of medicine, military, gaming, and more..</h1>
                             <p>Take the chance to learn how versatile virtual reality is in all the disciplines. You'll learn how it applys to your specific field of interest.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Learn
+                                <a class="btn btn-lg btn-primary" href="http://www.vrs.org.uk/virtual-reality-applications/" target="_blank" role="button">Learn
                                     more</a>
                             </p>
                         </div>
@@ -224,8 +224,7 @@
                             <h1>Gain exclusive access to demos and workshops with Oculus Rift and other VR devices.</h1>
                             <p>An advantage of being in the club is having access to not only the VR headsets but the software to develop for them. You'll also be working in teams with experienced project leads.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Browse
-                                    gallery</a>
+                                <a class="btn btn-lg btn-primary" href="https://www.oculus.com/en-us/" target="_blank" role="button">Check out Oculus!</a>
                             </p>
                         </div>
                     </div>
@@ -238,7 +237,7 @@
                             <h1>Augment your own research with help from VR</h1>
                             <p>Go beyond development and research how virtual reality is effecting your own field.</p>
                             <p>
-                                <a class="btn btn-lg btn-primary" href="#" role="button">Learn
+                                <a class="btn btn-lg btn-primary" href="http://www.2020research.com/virtual-reality/" target="_blank" role="button">Learn
                                     more</a>
                             </p>
                         </div>
@@ -276,7 +275,7 @@
                 <h2> Projects </h2>
                 <p>Email the projects email to propose any projects but to also ask for entering new projects/p>
                 <p>
-                    <a class="btn btn-default" href="#" role="button">vrprojects@ucsd.edu</a>
+                    <a class="btn btn-default" href="mailto:vrprojects@ucsd.edu" role="button">vrprojects@ucsd.edu</a>
                 </p>
             </div>
             </center>
@@ -300,7 +299,7 @@
                 <h2>Volunteer</h2>
                 <p>Get involved by volunteering for our events. It's a good way to network and make a lot of new friends with the same passions!</p>
                 <p>
-                    <a class="btn btn-default" href="#" role="button">vrvolunteer@ucsd.edu</a>
+                    <a class="btn btn-default" href="mailto:vrvolunteer@ucsd.edu" role="button">vrvolunteer@ucsd.edu</a>
                 </p>
             </div>
             </center>
@@ -324,8 +323,8 @@
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
                                     <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://twitter.com" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="http://youtube.com" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
                             </div>
                             </center>
