--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About VR Club</title>
+    <title>Media</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -158,7 +158,7 @@
 </script>
 
 
-	<div class="container" section id = "Gallery">
+	<div class="container" section id = "Gallery" style="padding: 50px;">
   <div class="row">
   	<center>
     <h1>Gallery</h1>
@@ -291,7 +291,7 @@ $('.thumbnail').click(function(){
 			<p>Archive</p>
 		</div> -->
 
-		<!-- FOOTER -->
+		 <!-- FOOTER -->
         <footer>
             <p class="pull-right" >
                 <a style="color:white; font-size: 150%;" href="#">Back to top</a>
@@ -303,8 +303,8 @@ $('.thumbnail').click(function(){
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
                                     <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://twitter.com" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="http://youtube.com" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
                             </div>
                             </center>
