--- a/opportunities.html
+++ b/opportunities.html
@@ -138,7 +138,7 @@
 
      <hr class="featurette-divider">
       <center>
-        <div class="row featurette" section id = "internships">
+        <div class="row featurette" section id = "internships" style="padding: 50px;">
             <div class="col-lg-8 col-lg-push-2">
                 <h2 class="featurette-heading">
                     Making it easier to get <span class="text-primary">involved.</span>
@@ -288,7 +288,7 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
     
      <hr class="featurette-divider">
      <center>
-        <div class="row featurette" section id = "jobs">
+        <div class="row featurette" section id = "jobs" style="padding: 50px;">
             <div class="col-lg-8 col-lg-push-2">
                 <h2 class="featurette-heading">
                     Current <span class="text-primary">opportunities.</span>
@@ -339,7 +339,7 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
         </div>
     </section>-->
 
-    <!-- FOOTER -->
+     <!-- FOOTER -->
         <footer>
             <p class="pull-right" >
                 <a style="color:white; font-size: 150%;" href="#">Back to top</a>
@@ -351,14 +351,13 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
                                     <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://twitter.com" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="http://youtube.com" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
                             </div>
                             </center>
                                      </p>
         </footer>
-
     </div>
 
 
