--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     </div>
 
      <!-- FOOTER -->
+       <!-- FOOTER -->
         <footer>
             <p class="pull-right" >
                 <a style="color:white; font-size: 150%;" href="#">Back to top</a>
@@ -231,8 +232,8 @@
                 <div class="footer-social-icons">
                                 <ul class="social-icons">
                                     <li><a href="https://www.facebook.com/ucsdvr/?fref=ts" class="social-icon"> <i class="fa fa-facebook" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
-                                    <li><a href="" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="https://twitter.com" class="social-icon"> <i class="fa fa-twitter" style="font-size: 150%;"></i></a></li>
+                                    <li><a href="http://youtube.com" class="social-icon"> <i class="fa fa-youtube" style="font-size: 150%;"></i></a></li>
                                 </ul>
                             </div>
                             </center>
