Trying to fix banner bug

--- a/opportunities.html
+++ b/opportunities.html
@@ -483,7 +483,8 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
             margin-top: -4em;
             display: table;
             width: 100%;
-            background-image: url('img/VR_jobs.jpg');
+            /*background-image: url('img/VR_jobs.jpg');*/
+            background-image: url('img/VRclubGroup.jpg');
             background-size: cover;
             height: 35em;
             margin-bottom: 2em;
