Fixed the banner bug.
NOW SHE IS DONE! :D

--- a/opportunities.html
+++ b/opportunities.html
@@ -484,7 +484,7 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
             display: table;
             width: 100%;
             /*background-image: url('img/VR_jobs.jpg');*/
-            background-image: url('img/VRclubGroup.jpg');
+            background-image: url('img/frostbite Jobs9.jpg');
             background-size: cover;
             height: 35em;
             margin-bottom: 2em;
