Made little edits according to Dani

--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
                 <div class="row featurette" section id = "getInvolved" style="padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
                 <center><h2 class="featurette-heading">
-                  Be Apart of Something <span class = "text-primary">Great.</span> 
+                  Be A Part of Something <span class = "text-primary">Great.</span> 
                 </h2> <p class="lead">There's so many reasons to join VR @ UCSD. Check them out below!</p> </center>
             </div>
 
@@ -264,6 +264,14 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
+
+     <div class="row featurette" section id = "getInvolved" style="padding: 40px;">
+            <div class="col-lg-8 col-lg-push-2">
+                <center><h2 class="featurette-heading">
+                  Contact <span class = "text-primary">Us.</span>  </center>
+            </div>
+
+            </div>
 
         <!-- Three columns of text below the carousel -->
                 <div class="row">
