--- a/about.html
+++ b/about.html
@@ -453,7 +453,7 @@
             /*margin-top: -4em;*/
             display: table;
             width: 100%;
-            background-image: url('img/VRclubGroup.jpg');
+            background-image: url('img/aboutUs2.jpg');
             background-size: cover;
             height: 35em;
             margin: 0;
