This is the last commit!! VRoom Vroom is done with Cogs 187B!!

--- a/about.html
+++ b/about.html
@@ -163,16 +163,24 @@
                 <h2 class="featurette-heading">
                     What is <span class= "text-primary">Virtual Reality?</span>
                 </h2>
-                <p class="lead">VR, or virtual reality is a technology that was introduced back in the 1950s but has not advanced in the way that it was in the 21st century. virtual reality is an immersive computer-simiulated reality where users where headsets in order to be transported to alternate realities. Originally Virtual Reality was thought to be mainly for entertainment but as of recent there have been advances in fields including medicine and education, showing how versatile it is.</p>
+                <p class="lead">VR, or virtual reality is a technology that was introduced back in the 1950s. It is an immersive computer-simiulated reality where users wear headsets in order to be transported to alternate realities. Originally Virtual Reality was thought to be mainly for entertainment but as of recent there have been advances in fields including medicine and education, showing how versatile it is.</p>
             </div>
                </center>
                         <center>
                        <div class = "vrGear">
                               <img src="img/gearVR.png" height= "200" width= "200">
                     </div>
+                    <br><br>
                 </center>
                     <div class = "col-lg-8 col-lg-push-2">
-                        <p class = "lead">VR can be experienced in three main ways. The first is through a VR headset. This is considered the best way to experience virtual reality but are also the most expensive, ranging from $99-$800. Some require a smartphone while others rely on a computer or game console. Some notable headsets include the Ocuclus Rift, Samsun Gear VR, HTC Vive, and Playstation VR. The second way is through a Cardboard VR Viewer. These were introduced by Google an offer a somewhat immersive experience for the cost of $15-$130. All you need besides the viewer is a compatible smartphone. The last option is to simply to use your mobile phone or a compatible web player. This is the least immersive but it offers users to still take advantage of the 360 degree view. </p>
+                        <p class = "lead">Here are some ways to experience VR with your smartphone or computer </p>
+                        <ul style="list-style-type:circle; ">
+                            <li>Using a dedicated headset like an Oculus Rift, HTC Vive, or Samsung Gear VR (requires compatible Smartphone or Computer)</li>
+                             <li>Cardboard Smartphone Viewer</li>
+                             <li>Through the Smartphone screen or Computer Screen with a dedicated 360 player</li>
+                        </ul> <br><br>
+                        <center>
+                        <p class = "lead"> VR Club @ UCSD offers all these experiences for free! </p> </center>
                         </div>
                     </div>
 
