--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                 <h2 class="featurette-heading">
                     Location. <span class="text-primary">Come Find Us.</span>
                 </h2>
-                <p class="lead">Come join us for GBM workshops every Friday from 5-6PM at  the Structural Mechanical Engineering Building (SME) 304.</p>
+                <p class="lead">Come join us for GBM workshops <br> 5-6PM Every Friday <br> at SME 304 (Structural Mechanical Engineering)</p>
             </div>
             </center>
                
@@ -166,7 +166,7 @@
                 <div class="row featurette" section id = "getInvolved" style="padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
                 <center><h2 class="featurette-heading">
-                  Be A Part of Something <span class = "text-primary">Great.</span> 
+                  Be A Part of Something <span class = "text-primary">Great</span> 
                 </h2> <p class="lead">There's so many reasons to join VR @ UCSD. Check them out below!</p> </center>
             </div>
 
@@ -235,7 +235,7 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Augment your own research with help from VR</h1>
-                            <p>Go beyond development and research how virtual reality is effecting your own field.</p>
+                            <p>Go beyond development and research by exploring the role of virtual reality in your own field.</p>
                             <p>
                                 <a class="btn btn-lg btn-primary" href="http://www.2020research.com/virtual-reality/" target="_blank" role="button">Learn
                                     more</a>
@@ -268,7 +268,7 @@
      <div class="row featurette" section id = "getInvolved" style="padding: 40px;">
             <div class="col-lg-8 col-lg-push-2">
                 <center><h2 class="featurette-heading">
-                  Contact <span class = "text-primary">Us.</span>  </center>
+                  Contact <span class = "text-primary">Us</span>  </center>
             </div>
 
             </div>
@@ -281,7 +281,7 @@
         <div class="col-lg-4">
                      <img src = "img/projectsidea.png" width="140" height="140">
                 <h2> Projects </h2>
-                <p>Email the projects email to propose any projects but to also ask for entering new projects/p>
+                <p>To join projects or to propose new projects, please email:</p>
                 <p>
                     <a class="btn btn-default" href="mailto:vrprojects@ucsd.edu" role="button">vrprojects@ucsd.edu</a>
                 </p>
@@ -293,7 +293,7 @@
             <div class="col-lg-4" section id = "contact" >
                 <img src = "img/Email-icon.png" width="140" height="140">
                 <h2>General</h2>
-                <p>Please direct any general to this one!</p>
+                <p>Please direct any general inquiries to this one!</p>
                 <p>
                     <a class="btn btn-default" href="mailto:virtualreality@ucsd.edu" role="button">virtualreality@ucsd.edu</a>
                             </p>
