--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>360 Video</h1>
-                            <p>The VR Club is currently is collaboration with the Communication and Theater departments to create a full film for Virtual Reality. Contact Pauline for more details.</p>
+                            <p>The VR Club is currently is collaboration with the Communication and Theater departments to create a full film for Virtual Reality. Please contact Pauline for more details.</p>
                             <p>
                                 <a class="btn btn-lg btn-primary" href="mailto:pwnyugen@ucsd.edu" role="button">Contact</a>
                             </p>
