--- a/media.html
+++ b/media.html
@@ -139,7 +139,7 @@
             <center><h1 style = "color:white;font-family:helvetica; position:relative; top: 0em;">
               Media
             </h1></center>
-            <center><p style = "position:relative; top: 5em; color:white; font-size: 125%;">Find not only pictures and videos of our events but also stay on top of the latest on VR.</center>
+            <center><p style = "position:relative; top: 5em; color:white; font-size: 125%;">Check out pictures and videos of our events and stay on top of the latest news on VR!</center>
         </div>
     </div>
 
