--- a/opportunities.html
+++ b/opportunities.html
@@ -129,7 +129,7 @@
             <center><h1 style = "color:white;font-family:helvetica; position:relative; top: 0em;">
               Opportunities
             </h1></center>
-            <center><p style = "position:relative; top: 5em; color:white; font-size: 125%;">Here you'll find how to get involved and how to contact VR @ UCSD!</center>
+            <center><p style = "position:relative; top: 5em; color:white; font-size: 125%;">Interested in working in the VR industry one day? Here you'll find out about current project and internship opportunitites.</center>
         </div>
     </div>
 
@@ -188,7 +188,7 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>NASA</h1>
-                            <p>TThe Jet Propulsion Laboratory is taking applications for interns interested in working with Virtual/Augmented Reality. They are working to provide AR training simulations for astronauts in space with mobile imaging and Microsoft’s HoloLens. 
+                            <p>The Jet Propulsion Laboratory is taking applications for interns interested in working with Virtual/Augmented Reality. They are working to provide AR training simulations for astronauts in space with mobile imaging and Microsoft’s HoloLens. 
 If you are interested, send your resume/portfolio to Victor Luo at Victor.Luo@jpl.nasa.gov and mention you are a part of VRClub @ UC San Diego.</p>
                             <p>
                                 <a class="btn btn-lg btn-primary" href="mailto:Victor.Luo@jpl.nasa.gov" role="button">Email NASA</a>
